Bug 348565: 'Icons with Text' toolbar doesn't show expand properly in pinstripe; text misaligned. r+a181=mconnor

--- a/mozilla/browser/themes/pinstripe/browser/browser.css
+++ b/mozilla/browser/themes/pinstripe/browser/browser.css
@@ -877,24 +877,24 @@ toolbar[iconsize="small"] #paste-button:hover:active {
 
 #urlbar[level="high"] #lock-icon {
   list-style-image: url("chrome://browser/skin/Secure.png");
-  -moz-image-region: rect(0px, 18px, 18px, 0px);
+  -moz-image-region: rect(0px, 16px, 16px, 0px);
 }
 #urlbar[level="high"] #lock-icon:hover {
-  -moz-image-region: rect(18px, 18px, 36px, 0px);
+  -moz-image-region: rect(16px, 16px, 32px, 0px);
 }
 #urlbar[level="high"] #lock-icon:active {
-  -moz-image-region: rect(36px, 18px, 54px, 0px);
+  -moz-image-region: rect(32px, 16px, 48px, 0px);
 }
 
 #urlbar[level="low"] #lock-icon {
   list-style-image: url("chrome://browser/skin/Secure.png");
-  -moz-image-region: rect(0px, 18px, 18px, 0px);
+  -moz-image-region: rect(0px, 16px, 16px, 0px);
 }
 #urlbar[level="low"] #lock-icon:hover {
-  -moz-image-region: rect(18px, 18px, 36px, 0px);
+  -moz-image-region: rect(16px, 16px, 32px, 0px);
 }
 #urlbar[level="low"] #lock-icon:active {
-  -moz-image-region: rect(36px, 18px, 54px, 0px);
+  -moz-image-region: rect(32px, 16px, 48px, 0px);
 }
 
 #urlbar[level="broken"] #lock-icon {
@@ -929,7 +929,6 @@ toolbar[iconsize="small"] #paste-button:hover:active {
 #page-proxy-button {
   width: 16px;
   height: 16px;
-  max-height: 16px;
   margin: 0px;
   padding: 0px;
 }
